--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<title>All About Chemistry</title>
 		<meta charset="UTF-8">
 		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../index.css" type="text/css">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
         <div class="bar">
