--- a/chemdefpage.html
+++ b/chemdefpage.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>What is Chemistry?</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../chemdefpage.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="chemdefpage.css" type="text/css">
 	</head>
 	<body>
         <div class="bar">
@@ -14,11 +14,11 @@
 			<a id="home" href="index.html">HOME</a>
         </div>
 		<div class="cdimg">
-			<img src="images/oxygen.png" width="80%"></img>
+			<img src="oxygen.png" width="80%"></img>
 			<p>An Oxygen atom, with 8 electrons.</p>
-			<img src="images/h2o.png" width="80%"></img>
+			<img src="h2o.png" width="80%"></img>
 			<p>A water molecule.</p>
-			<img src="images/2h2oreaction.jpg" width="80%"></img>
+			<img src="2h2oreaction.jpg" width="80%"></img>
 			<p>A chemical reaction between 2 H2 molecules and 1 O2 molecule, forming 2 H2O molecules.</p>
 			<div class="ref">
 				<h6>References:</h6>
