--- a/analyticalchem.html
+++ b/analyticalchem.html
@@ -4,9 +4,9 @@
 		<title>Analytical Chemistry</title>
 		<meta charset="UTF-8">
 		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../branches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="branches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -30,7 +30,7 @@
 				to see if it is potable and safe enough to be consumed.</li>
 				<div>
 					<figure>
-						<img src="images/ppmtable.png" height="70%"></img>
+						<img src="ppmtable.png" height="70%"></img>
 						<figcaption id="ppmtablecaption">This is a table from a research 
 						paper by R. Afrin, M. Y. Mia, and S. Akter on the heavy metal 
 						concentrations in the Turag River in Bangladesh. The values show 
