--- a/chembranches.html
+++ b/chembranches.html
@@ -3,10 +3,10 @@
     <head>
 		<title>The 5 Major Branches of Chemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../chembranches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="chembranches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
