--- a/inorgchem.html
+++ b/inorgchem.html
@@ -3,10 +3,10 @@
     <head>
 		<title>Inorganic Chemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../branches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="branches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -29,19 +29,19 @@
 				<div>
 					<div class="divlist">
 						<figure>
-							<img src="images/h2o.png" height="100px"></img>
+							<img src="h2o.png" height="100px"></img>
 							<figcaption>Water</figcaption>
 						</figure>
 					</div>
 					<div class="divlist">
 						<figure>
-							<img src="images/sf6.png" height="100px"></img>
+							<img src="sf6.png" height="100px"></img>
 							<figcaption>Sulfur Hexafluoride</figcaption>
 						</figure>
 					</div>
 					<div class="divlist">
 						<figure>
-							<img src="images/nacl.png" height="100px"></img>
+							<img src="nacl.png" height="100px"></img>
 							<figcaption>Sodium Chloride (Table Salt)</figcaption>
 						</figure>
 					</div>
