--- a/orgchem.html
+++ b/orgchem.html
@@ -3,10 +3,10 @@
     <head>
 		<title>Organic Chemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../branches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="branches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -30,19 +30,19 @@
 				<div>
 					<div class="divlist">
 						<figure>
-							<img src="images/glucose.png" height="100px"></img>
+							<img src="glucose.png" height="100px"></img>
 							<figcaption>Glucose</figcaption>
 						</figure>
 					</div>
 					<div class="divlist">
 						<figure>
-							<img src="images/co2.png" height="100px"></img>
+							<img src="co2.png" height="100px"></img>
 							<figcaption>Carbon Dioxide</figcaption>
 						</figure>
 					</div>
 					<div class="divlist">
 						<figure>
-							<img src="images/cellulose.png" height="100px"></img>
+							<img src="cellulose.png" height="100px"></img>
 							<figcaption>Cellulose</figcaption>
 						</figure>
 					</div>
