--- a/physchem.html
+++ b/physchem.html
@@ -3,10 +3,10 @@
     <head>
 		<title>Physical Chemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
-		<link rel="stylesheet" href="../bar.css" type="text/css">
-		<link rel="stylesheet" href="../branches.css" type="text/css">
-		<link rel="stylesheet" href="../footer.css" type="text/css">
+		<link rel="icon" href="favicon.png">
+		<link rel="stylesheet" href="bar.css" type="text/css">
+		<link rel="stylesheet" href="branches.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
@@ -27,7 +27,7 @@
 				explain the quantitative aspects of chemical reactions.</li>
 				<div>
 					<figure>
-						<img src="images/electrochemicalcell.jpg" width="60%"></img>
+						<img src="electrochemicalcell.jpg" width="60%"></img>
 						<figcaption id="physchemcaption">Physical Chemistry can be seen in an
 						Electrochemical Cell, where chemical reactions 
 						are used to make electrical currents.</figcaption>
