--- a/analyticalchem.html
+++ b/analyticalchem.html
@@ -3,7 +3,7 @@
     <head>
 		<title>Analytical Chemistry</title>
 		<meta charset="UTF-8">
-		<link rel="icon" href="images/favicon.png">
+		<link rel="icon" href="favicon.png">
 		<link rel="stylesheet" href="bar.css" type="text/css">
 		<link rel="stylesheet" href="branches.css" type="text/css">
 		<link rel="stylesheet" href="footer.css" type="text/css">
